--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a class="scroll" href="#about">About</a></li>
             <li><a class="scroll" href="#services">Services</a></li>
             <li><a class="scroll" href="#gallery">Gallery</a></li>
+            <li><a class="scroll" href="#testimonials">Testimonials</a></li>
         </ul>
 
     </nav>
@@ -71,6 +72,43 @@
                 <div><img src="https://unsplash.it/200/200/?image=1048"></div>
                 <div><img src="https://unsplash.it/200/200/?image=1040"></div>
                 <div><img src="https://unsplash.it/200/200/?image=1031"></div>
+            </div>
+        </div>
+    </section>
+    <section class="testimonials" id="testimonials">
+        <div class="container">
+            <h1>Testimonials</h1>
+            <div class="testimonial-items">
+                <div class="testimonial-container test1">
+                    <div class="test-user">
+                        <img src="https://s3.amazonaws.com/uifaces/faces/twitter/admod/128.jpg" class="user-headshot" alt="face"><br>
+                        <strong>Some Guy</strong><br>
+                        <em>Some guy's job title</em>
+                    </div>
+                    <div class="test-content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas corrupti vero at quo totam distinctio, eaque eligendi impedit perferendis sapiente.</p>
+                    </div>
+                </div>
+                <div class="testimonial-container test2">
+                    <div class="test-user">
+                        <img src="https://s3.amazonaws.com/uifaces/faces/twitter/idiot/128.jpg" class="user-headshot" alt="face"><br>
+                        <strong>Another Guy</strong><br>
+                        <em>Another guy's job title</em>
+                    </div>
+                    <div class="test-content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas corrupti vero at quo totam distinctio, eaque eligendi impedit perferendis sapiente.</p>
+                    </div>
+                </div>
+                <div class="testimonial-container test3">
+                    <div class="test-user">
+                        <img src="https://s3.amazonaws.com/uifaces/faces/twitter/brad_frost/128.jpg" class="user-headshot" alt="face"><br>
+                        <strong>A Different Guy</strong><br>
+                        <em>A Different guy's job title</em>
+                    </div>
+                    <div class="test-content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas corrupti vero at quo totam distinctio, eaque eligendi impedit perferendis sapiente.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
