added contact form

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a class="scroll" href="#services">Services</a></li>
             <li><a class="scroll" href="#gallery">Gallery</a></li>
             <li><a class="scroll" href="#testimonials">Testimonials</a></li>
+            <li><a class="scroll" href="#contact">Contact</a></li>
         </ul>
 
     </nav>
@@ -86,7 +87,8 @@
                         <em>Some guy's job title</em>
                     </div>
                     <div class="test-content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas corrupti vero at quo totam distinctio, eaque eligendi impedit perferendis sapiente.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas corrupti vero at quo totam distinctio,
+                            eaque eligendi impedit perferendis sapiente.</p>
                     </div>
                 </div>
                 <div class="testimonial-container test2">
@@ -96,7 +98,8 @@
                         <em>Another guy's job title</em>
                     </div>
                     <div class="test-content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas corrupti vero at quo totam distinctio, eaque eligendi impedit perferendis sapiente.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas corrupti vero at quo totam distinctio,
+                            eaque eligendi impedit perferendis sapiente.</p>
                     </div>
                 </div>
                 <div class="testimonial-container test3">
@@ -106,15 +109,37 @@
                         <em>A Different guy's job title</em>
                     </div>
                     <div class="test-content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas corrupti vero at quo totam distinctio, eaque eligendi impedit perferendis sapiente.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas corrupti vero at quo totam distinctio,
+                            eaque eligendi impedit perferendis sapiente.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <section class="contact" id="contact">
+        <div class="container">
+            <h1>Contact Me</h1>
+            <div class="contact-grid-container">
+                <div class="contact-container">
+                    <form>
+                        <div class="form-group">
+                            <label for="email">Email:</label>
+                            <input class="form-control" type="email" placeholder="enter your email address...">
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message:</label>
+                            <textarea class="form-control" name="message" placeholder="enter a message"></textarea>
+                        </div>
+                        <button type="button">Send</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="hero"></section>
     <footer>
         <div class="container">
-            <p>&copy; 2017</p>
+            <p>&copy; Company Name 2017</p>
             <div class="footer-container">
                 <div><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
                 <div><i class="fa fa-mobile" aria-hidden="true"></i></div>
